<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">TransMob</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="jp_title">Journey Planner</string>
    <string name="ns_title">Nearby Stops</string>
    <string name="toLocation">Enter your destination</string>
    <string name="sendDest">Find journey!</string>
    <string name="news">Maintenance News</string>
    <string name="leaveAfter">Leave after:</string>
    <string name="currentDate">Current Date</string>
    <string name="currentTime">Current Time</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="splashdesc">Splash Screen</string>
    <string name="fromLocation">Default: Your current location</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="tutorial">Tutorial</string>
    <string name="finish_tutorial">Okay, I got it!</string>
    <string name="tutorial_image_desc">Tutorial image</string>
    <string name="next_arrow_desc">Next Arrow</string>
    <string name="prev_arrow_desc">Prev Arrow</string>
    <string name="locate_me">Me</string>
    <string name="temp">Temp</string>
    <string name="service_code">412</string>
    <string name="my_location_desc">My Location Button</string>
    <string name="vehicle_button_string">Vehicle type:</string>
    <string name="max_walk_string">Max. walking distance:</string>
    <string name="trip_description">City, Milton, Toowong, St Lucia, Uni of Qld, St Lucia South </string>
    <string name="platform">Platform E</string>
    <string name="title_template_step">Tutorial - Page <xliff:g id="step_number">%1$d</xliff:g></string>
    <string name="gcnum_label">GoCard Number:</string>
    <string name="password_label">Password:</string>
    <string name="login_label">Login!</string>
    <string name="check_remember">Remember me</string>
    <string name="wrongpass_warning">Incorrect username / password!</string>
    <string name="current_balance">GoCard Balance:</string>
 	<string name="as_of">As of 24 Oct 2013 04:17 PM</string>
 	<string name="balance_num">$999.99</string>
 	<string name="sample_date">24 Oct 2013</string>
 	<string name="settings_label">Settings</string>
 	<string name="general_settings">General Settings</string>
 	<string name="tutorial_setting">Show First-Time Tutorial</string>
 	<string name="tutorial_summary">Show the tutorial during start up</string>
 	<string name="ns_number_pref">Number of Nearby Stops</string>
 	<string name="ns_number_summary">Maximum number of stops to be displayed (Default: 25)</string>
 	<string name="ns_radius_pref">Radius</string>
 	<string name="ns_radius_summary">Maximum detection range from current location (Default: 1000m)</string>
 	<string name="do_not_show">Do not show the tutorial again</string>
    
    <string-array name="menu_array">
        <item>Nearby Stops</item>
        <item>Journey Planner</item>
        <item>GoCard Login</item>
        <item>Maintenance News</item>
        <item>Settings</item>
    </string-array>
    
    <string-array name="leave_options_array">
        <item>Leave after</item>
        <item>Arrive before</item>
        <item>First services</item>
        <item>Last services</item>
    </string-array>
    
    <string-array name="vehicle_type_array">
        <item>All</item>
        <item>Bus</item>
        <item>Ferry</item>
        <item>Train</item>
        <item>Walk</item>
    </string-array>
    
    <string-array name="max_walk_array">
        <item>500 m</item>
        <item>1000 m</item>
        <item>1500 m</item>
        <item>2000 m</item>
        <item>2500 m</item>
        <item>3000 m</item>
    </string-array>
    
    <string-array name="radius_array">
        <item>500 m</item>
        <item>1000 m</item>
        <item>1500 m</item>
        <item>2000 m</item>
        <item>2500 m</item>
        <item>3000 m</item>
    </string-array>
    
    <string-array name="radius_values">
        <item>500</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
        <item>2500</item>
        <item>3000</item>
    </string-array>

</resources>