<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto" 
    android:title="@string/settings_label">

  <PreferenceCategory
     android:title="@string/ns_title">
     
       <transponders.transmob.StopsNumberDialogPreference
           	android:key="pref_num_of_stops"
			android:defaultValue="25"
			android:dialogMessage="Please select the number of stops:"
			android:max="50"
			android:title="@string/ns_number_pref"
			android:summary="@string/ns_number_summary"
			custom:min="10" />
      
      <ListPreference
            android:key="pref_radius"
            android:title="@string/ns_radius_pref"
            android:summary="@string/ns_radius_summary"
            android:defaultValue="1000"
            android:entries="@array/radius_array"
            android:entryValues="@array/radius_values" /> 
    
  </PreferenceCategory>

  <PreferenceCategory
     android:title="@string/general_settings" >
      
      <CheckBoxPreference
       android:key="SHOW_TUTORIAL"
       android:title="@string/tutorial_setting"
       android:summary="@string/tutorial_summary"
       android:defaultValue="false" />

  </PreferenceCategory>
   
</PreferenceScreen>